fixed overflow

--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@
 }
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 body {
   background-color: var(--Pale-blue);
